--- a/data/index.html
+++ b/data/index.html
@@ -331,94 +331,88 @@ textarea::placeholder {
   <label for="timeZone">Time Zone</label>
   <select id="timeZone" name="timeZone" required>
     <option value="" disabled selected>Select your time zone</option>
-    <!-- ... (timezone options unchanged) ... -->
-    <option value="Africa/Algiers">Africa/Algiers</option>
-    <option value="Africa/Cairo">Africa/Cairo</option>
-    <option value="Africa/Casablanca">Africa/Casablanca</option>
-    <option value="Africa/Johannesburg">Africa/Johannesburg</option>
-    <option value="Africa/Lagos">Africa/Lagos</option>
-    <option value="Africa/Nairobi">Africa/Nairobi</option>
-    <option value="America/Anchorage">America/Anchorage</option>
-    <option value="America/Argentina/Buenos_Aires">America/Argentina/Buenos_Aires</option>
-    <option value="America/Bogota">America/Bogota</option>
-    <option value="America/Caracas">America/Caracas</option>
-    <option value="America/Chicago">America/Chicago</option>
-    <option value="America/Denver">America/Denver</option>
-    <option value="America/Lima">America/Lima</option>
-    <option value="America/Los_Angeles">America/Los_Angeles</option>
-    <option value="America/Mexico_City">America/Mexico_City</option>
-    <option value="America/New_York">America/New_York</option>
-    <option value="America/Phoenix">America/Phoenix</option>
-    <option value="America/Santiago">America/Santiago</option>
-    <option value="America/Sao_Paulo">America/Sao_Paulo</option>
-    <option value="America/Toronto">America/Toronto</option>
-    <option value="America/Vancouver">America/Vancouver</option>
-    <option value="Asia/Almaty">Asia/Almaty</option>
-    <option value="Asia/Amman">Asia/Amman</option>
-    <option value="Asia/Baghdad">Asia/Baghdad</option>
-    <option value="Asia/Baku">Asia/Baku</option>
-    <option value="Asia/Bangkok">Asia/Bangkok</option>
-    <option value="Asia/Beirut">Asia/Beirut</option>
-    <option value="Asia/Dhaka">Asia/Dhaka</option>
-    <option value="Asia/Dubai">Asia/Dubai</option>
-    <option value="Asia/Ho_Chi_Minh">Asia/Ho_Chi_Minh</option>
-    <option value="Asia/Hong_Kong">Asia/Hong_Kong</option>
-    <option value="Asia/Jakarta">Asia/Jakarta</option>
-    <option value="Asia/Jerusalem">Asia/Jerusalem</option>
-    <option value="Asia/Kabul">Asia/Kabul</option>
-    <option value="Asia/Karachi">Asia/Karachi</option>
-    <option value="Asia/Kathmandu">Asia/Kathmandu</option>
-    <option value="Asia/Kolkata">Asia/Kolkata</option>
-    <option value="Asia/Kuala_Lumpur">Asia/Kuala_Lumpur</option>
-    <option value="Asia/Kuwait">Asia/Kuwait</option>
-    <option value="Asia/Manila">Asia/Manila</option>
-    <option value="Asia/Riyadh">Asia/Riyadh</option>
-    <option value="Asia/Seoul">Asia/Seoul</option>
-    <option value="Asia/Shanghai">Asia/Shanghai</option>
-    <option value="Asia/Singapore">Asia/Singapore</option>
-    <option value="Asia/Taipei">Asia/Taipei</option>
-    <option value="Asia/Tashkent">Asia/Tashkent</option>
-    <option value="Asia/Tehran">Asia/Tehran</option>
-    <option value="Asia/Tokyo">Asia/Tokyo</option>
-    <option value="Asia/Yangon">Asia/Yangon</option>
-    <option value="Australia/Adelaide">Australia/Adelaide</option>
-    <option value="Australia/Brisbane">Australia/Brisbane</option>
-    <option value="Australia/Melbourne">Australia/Melbourne</option>
-    <option value="Australia/Perth">Australia/Perth</option>
-    <option value="Australia/Sydney">Australia/Sydney</option>
-    <option value="Europe/Amsterdam">Europe/Amsterdam</option>
-    <option value="Europe/Athens">Europe/Athens</option>
-    <option value="Europe/Belgrade">Europe/Belgrade</option>
-    <option value="Europe/Berlin">Europe/Berlin</option>
-    <option value="Europe/Brussels">Europe/Brussels</option>
-    <option value="Europe/Bucharest">Europe/Bucharest</option>
-    <option value="Europe/Budapest">Europe/Budapest</option>
-    <option value="Europe/Copenhagen">Europe/Copenhagen</option>
-    <option value="Europe/Dublin">Europe/Dublin</option>
-    <option value="Europe/Helsinki">Europe/Helsinki</option>
-    <option value="Europe/Istanbul">Europe/Istanbul</option>
-    <option value="Europe/Kiev">Europe/Kiev</option>
-    <option value="Europe/Lisbon">Europe/Lisbon</option>
-    <option value="Europe/London">Europe/London</option>
-    <option value="Europe/Madrid">Europe/Madrid</option>
-    <option value="Europe/Moscow">Europe/Moscow</option>
-    <option value="Europe/Oslo">Europe/Oslo</option>
-    <option value="Europe/Paris">Europe/Paris</option>
-    <option value="Europe/Prague">Europe/Prague</option>
-    <option value="Europe/Riga">Europe/Riga</option>
-    <option value="Europe/Rome">Europe/Rome</option>
-    <option value="Europe/Sofia">Europe/Sofia</option>
-    <option value="Europe/Stockholm">Europe/Stockholm</option>
-    <option value="Europe/Tallinn">Europe/Tallinn</option>
-    <option value="Europe/Vienna">Europe/Vienna</option>
-    <option value="Europe/Vilnius">Europe/Vilnius</option>
-    <option value="Europe/Warsaw">Europe/Warsaw</option>
-    <option value="Europe/Zurich">Europe/Zurich</option>
-    <option value="Pacific/Auckland">Pacific/Auckland</option>
-    <option value="Pacific/Fiji">Pacific/Fiji</option>
-    <option value="Pacific/Guam">Pacific/Guam</option>
-    <option value="Pacific/Honolulu">Pacific/Honolulu</option>
-    <option value="Etc/UTC">Etc/UTC</option>
+  <option value="Africa/Cairo">Africa/Cairo</option>
+  <option value="Africa/Casablanca">Africa/Casablanca</option>
+  <option value="Africa/Johannesburg">Africa/Johannesburg</option>
+  <option value="America/Anchorage">America/Anchorage</option>
+  <option value="America/Argentina/Buenos_Aires">America/Argentina/Buenos_Aires</option>
+  <option value="America/Chicago">America/Chicago</option>
+  <option value="America/Denver">America/Denver</option>
+  <option value="America/Guatemala">America/Guatemala</option>
+  <option value="America/Halifax">America/Halifax</option>
+  <option value="America/Los_Angeles">America/Los_Angeles</option>
+  <option value="America/Mexico_City">America/Mexico_City</option>
+  <option value="America/New_York">America/New_York</option>
+  <option value="America/Phoenix">America/Phoenix</option>
+  <option value="America/Santiago">America/Santiago</option>
+  <option value="America/Sao_Paulo">America/Sao_Paulo</option>
+  <option value="America/St_Johns">America/St_Johns</option>
+  <option value="America/Toronto">America/Toronto</option>
+  <option value="America/Vancouver">America/Vancouver</option>
+  <option value="Asia/Almaty">Asia/Almaty</option>
+  <option value="Asia/Amman">Asia/Amman</option>
+  <option value="Asia/Baghdad">Asia/Baghdad</option>
+  <option value="Asia/Bangkok">Asia/Bangkok</option>
+  <option value="Asia/Beirut">Asia/Beirut</option>
+  <option value="Asia/Dhaka">Asia/Dhaka</option>
+  <option value="Asia/Dubai">Asia/Dubai</option>
+  <option value="Asia/Ho_Chi_Minh">Asia/Ho_Chi_Minh</option>
+  <option value="Asia/Hong_Kong">Asia/Hong_Kong</option>
+  <option value="Asia/Jakarta">Asia/Jakarta</option>
+  <option value="Asia/Jerusalem">Asia/Jerusalem</option>
+  <option value="Asia/Karachi">Asia/Karachi</option>
+  <option value="Asia/Kathmandu">Asia/Kathmandu</option>
+  <option value="Asia/Kolkata">Asia/Kolkata</option>
+  <option value="Asia/Kuala_Lumpur">Asia/Kuala_Lumpur</option>
+  <option value="Asia/Manila">Asia/Manila</option>
+  <option value="Asia/Seoul">Asia/Seoul</option>
+  <option value="Asia/Shanghai">Asia/Shanghai</option>
+  <option value="Asia/Singapore">Asia/Singapore</option>
+  <option value="Asia/Taipei">Asia/Taipei</option>
+  <option value="Asia/Tashkent">Asia/Tashkent</option>
+  <option value="Asia/Tokyo">Asia/Tokyo</option>
+  <option value="Asia/Ulaanbaatar">Asia/Ulaanbaatar</option>
+  <option value="Asia/Yekaterinburg">Asia/Yekaterinburg</option>
+  <option value="Atlantic/Azores">Atlantic/Azores</option>
+  <option value="Atlantic/Reykjavik">Atlantic/Reykjavik</option>
+  <option value="Australia/Adelaide">Australia/Adelaide</option>
+  <option value="Australia/Brisbane">Australia/Brisbane</option>
+  <option value="Australia/Darwin">Australia/Darwin</option>
+  <option value="Australia/Hobart">Australia/Hobart</option>
+  <option value="Australia/Melbourne">Australia/Melbourne</option>
+  <option value="Australia/Perth">Australia/Perth</option>
+  <option value="Australia/Sydney">Australia/Sydney</option>
+  <option value="Europe/Amsterdam">Europe/Amsterdam</option>
+  <option value="Europe/Athens">Europe/Athens</option>
+  <option value="Europe/Belgrade">Europe/Belgrade</option>
+  <option value="Europe/Berlin">Europe/Berlin</option>
+  <option value="Europe/Brussels">Europe/Brussels</option>
+  <option value="Europe/Bucharest">Europe/Bucharest</option>
+  <option value="Europe/Copenhagen">Europe/Copenhagen</option>
+  <option value="Europe/Dublin">Europe/Dublin</option>
+  <option value="Europe/Helsinki">Europe/Helsinki</option>
+  <option value="Europe/Istanbul">Europe/Istanbul</option>
+  <option value="Europe/Kiev">Europe/Kiev</option>
+  <option value="Europe/Lisbon">Europe/Lisbon</option>
+  <option value="Europe/London">Europe/London</option>
+  <option value="Europe/Madrid">Europe/Madrid</option>
+  <option value="Europe/Moscow">Europe/Moscow</option>
+  <option value="Europe/Oslo">Europe/Oslo</option>
+  <option value="Europe/Paris">Europe/Paris</option>
+  <option value="Europe/Prague">Europe/Prague</option>
+  <option value="Europe/Rome">Europe/Rome</option>
+  <option value="Europe/Stockholm">Europe/Stockholm</option>
+  <option value="Europe/Warsaw">Europe/Warsaw</option>
+  <option value="Pacific/Auckland">Pacific/Auckland</option>
+  <option value="Pacific/Chatham">Pacific/Chatham</option>
+  <option value="Pacific/Fiji">Pacific/Fiji</option>
+  <option value="Pacific/Guam">Pacific/Guam</option>
+  <option value="Pacific/Honolulu">Pacific/Honolulu</option>
+  <option value="Pacific/Port_Moresby">Pacific/Port_Moresby</option>
+  <option value="Pacific/Tahiti">Pacific/Tahiti</option>
+  <option value="UTC">UTC</option>
+  <option value="Etc/GMT+1">Etc/GMT+1</option>
+  <option value="Etc/GMT-1">Etc/GMT-1</option>
   </select>
 
     <label for="language">Language (Day & Weather)</label>
