Added Serbian Language

--- a/ESPTimeCast_ESP32/data/index.html
+++ b/ESPTimeCast_ESP32/data/index.html
@@ -441,6 +441,7 @@ textarea::placeholder {
     <option value="pl">Polish</option>
     <option value="pt">Portuguese</option>
     <option value="ro">Romanian</option>
+    <option value="sr">Serbian</option>
     <option value="sk">Slovak</option>
     <option value="sl">Slovenian</option>
     <option value="es">Spanish</option>
